# SCLC-Diagnostic

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yaml  flaws.md  logger.py  main.py  main2.py  model_selection.py  model_selection2.py  pyproject.toml  requirements.txt  retinaNet.md  runs.md
configs/: swin3d_config.yaml  swin_unetr_config.yaml  swinv2_3d_config.yaml
data/: __init__.py  biglunge_loader.py  data_loader.py  data_preprocessing.py  dataset_2d.py  dataset_mil.py  download_NSCLC_Radiomics.py  exclusions.py  fetch_tcia.ipynb  lung_pet_ct_dx_loader.py  recover_missing_annotations.py  transforms.py  verify_annotations.py
data_exploration/: BigLunge_expl.ipynb  annot_to_nii.ipynb  annot_to_nii.py  create_masks.py  create_masks_2.py  data_expl.ipynb  draw_boxes.py  gui.py  pet2niix.py  scan_for_PET.py  scan_for_other.py  simple_itk_mask.ipynb
data_pipeline/: README.md  annotation_mapping.py
docs/: 2d_augmentations.md  Enhance Lung Cancer Diagnostics Pipeline.md  adding_2d_and_2p5d_models.md  investigation_2026_04_30.md  limitations.md  radiomics_audit.md  radiomics_plan.md
grad_cam/: colorize.py  grad_cam.py  mock.py
models/: __init__.py  build.py  config.py  model_selection.py  plot_logs.py  simmim.py  swin_transformer.py  swin_transformer_3d.py  swin_transformer_3d_v2.py  swin_transformer_v2.py  swin_unetr.py  utils.py
results/: splits.json
sclc/: __init__.py  logger.py  main.py
scripts/: ablation_plots.py  audit_multifocal.py  build_final_results.py  build_thesis_results.py  dump_splits.py  report_test_metrics.py  run_all_2d_v3.sh  (+2 more)
(+248 files in other folders)
