[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sclc"
version = "0.1.0"
description = "SCLC subtype classification pipeline (master's thesis, NTNU 2026)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Hans Stemshaug" },
    { name = "Rafael Henrik Valdes Oversand" },
]

# Concrete pinned versions live in environment.yaml / requirements.txt.
# pyproject only declares the package surface — see those files for the
# reproducible environment.
dependencies = []

[tool.setuptools.packages.find]
include = ["sclc*"]
exclude = ["data_pipeline*", "scripts*", "results*", "configs*", "tests*"]
